--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@
 }
 
 footer {
-    background-color: #000014f6;;
+    background-color: #000014f6;
     padding: 7px;
     color: white;
     text-align: center;
