--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,7 +75,7 @@ li {
 
 a {
     text-decoration: none;
-    font-size: 22px;
+    font-size: 20px;
     padding: 10px;
 }
 
@@ -168,7 +168,8 @@ a:hover {
 }
 
 label {
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .btn {
@@ -251,11 +252,10 @@ input[type="checkbox"] {
 .container-iframes {
     display: flex;
     flex-wrap: wrap;
-    margin: 30px;
+    margin: 10px;
     align-items: center;
     justify-content: center;
-    background-color: rgb(180, 180, 180);
-    border: 5px solid black;
+    background-color: rgb(233, 233, 233);
     border-radius: 10px;
 }
 
@@ -267,7 +267,7 @@ iframe {
 .container-iframes-pai {
     border: 2px solid black;
     margin: 20px;
-    padding: 6px;
+    padding: 4px;
     border-radius: 10px;
     background-color: #ff0000;
     display: flex;
@@ -278,7 +278,7 @@ iframe {
     display: flex;
     flex-direction: column;
     width: 450px;
-    height: 400px;
+    height: 460px;
     padding: 20px;
     border: 1px solid black;
     border-radius: 10px;
@@ -294,4 +294,20 @@ iframe {
 .mensagem-erro {
     text-align: center;
     padding: 30px;
+}
+
+.link-video {
+    color: white;
+}
+
+.container-link {
+    background-color: #5e4dcd;
+    padding: 10px;
+    margin: 4px;
+    border-radius: 20px;
+    width: 350px;
+}
+
+.form-video {
+    height: 85vh;
 }
