--- a/public/css/style.css
+++ b/public/css/style.css
@@ -328,7 +328,13 @@ iframe {
 }
 
 .img-edit img {
-    width: 150px;
-    height: 150px;
-    margin: 10px;
+    width: 30%;
+    height: 300px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.img-class-edit {
+    display: flex;
+    justify-content: center;
 }
