--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,7 @@ footer {
 
 .container-titulos h1 {
     color: white;
-    padding: 50px;
+    padding: 20px;
     font-size: 3em;
 }
 
@@ -49,7 +49,9 @@ footer {
     display: flex;
     justify-content: space-around;
     align-items: center !important;
-    padding: 40px;
+    padding-bottom: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .card img {
