--- a/public/css/style.css
+++ b/public/css/style.css
@@ -334,3 +334,8 @@ iframe {
     display: flex;
     justify-content: center;
 }
+
+.containerPaginate {
+    display: flex;
+    flex-direction: column;
+}
